--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -53,7 +53,8 @@ include-autotrash-description=__CONTROL__inventory-cleanup__ distributes all ite
 cleanup-request-overflow-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]minimum[/font] request amount.\n\nOverrides defaults.
 drop-trash-to-chests=Drop items to chests
 drop-trash-to-chests-description=__CONTROL__inventory-cleanup__ can drop items into nearby chests already containing them.\n(Ignored for requester chests, they always get requested items)
-item-limits=Use fuel/ammo limits from above
+use-fuel-limit=Use fuel limit from above
+use-ammo-limit=Use ammo limit from above
 enable=Enable
 fuel-limit=Fuel limit
 ammo-limit=Ammo limit
