--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -1,10 +1,8 @@
 [mod-setting-name]
 disable-distribute=Disable [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font] modification globally
 disable-inventory-cleanup=Disable Inventory Cleanup (__CONTROL__inventory-cleanup__) globally
-disable-inventory-fill=Disable Inventory Fill (__CONTROL__inventory-cleanup__) globally
-info=Settings moved... (__CONTROL__open-even-distribution-settings__ in game)
+info=Settings moved (press __CONTROL__open-even-distribution-settings__ in game)
 
-settings-storage=Dont change!
 distribution-delay=DEPRECATED - Dont change!
 max-inventory-cleanup-drop-range=DEPRECATED - Dont change!
 ignored-entities=DEPRECATED - Dont change!
@@ -18,7 +16,7 @@ cleanup-logistic-request-overflow=DEPRECATED - Dont change!
 enable-logistics-tab=Even Distribution
 
 [technology-description]
-enable-logistics-tab=Enables the character logistics tab (press __CONTROL__controller-gui-logistics-tab__). Use it to customize the Inventory Cleanup Hotkey.
+enable-logistics-tab=Enables the character logistics tab (press __CONTROL__controller-gui-logistics-tab__). Use it to customize the Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__).
 
 [controls]
 inventory-cleanup=Inventory Cleanup
@@ -30,14 +28,9 @@ inventory-cleanup=Evenly distribute excess trash items into nearby machines.
 [shortcut]
 open-even-distribution-settings=Even Distribution settings (__CONTROL__open-even-distribution-settings__)
 
-[message]
-setting-parse-error=[Even Distribution] Invalid value '__2__' in per-player mod setting '__1__'__3__. Value has been ignored.
-for-user= of __1__
-usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
-
 [settings-gui]
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
-inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
+inventory-cleanup-title=Inventory Cleanup (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Evenly distributes excess trash items into nearby machines.
 inventory-cleanup-list=Includes items from:
 inventory-cleanup-configure=Customize using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
@@ -63,9 +56,9 @@ hand-tooltip=Hand
 inventory-tooltip=Inventory
 car-tooltip=Vehicle you are currently driving
 distribution-delay=Distribution delay
-distribution-delay-description=The delay before items are evenly distributed with [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font].
+distribution-delay-description=The delay before items are evenly distributed with [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font].\n\nDefault: 0.9
 max-inventory-cleanup-drop-range=__CONTROL__inventory-cleanup__ range
-max-inventory-cleanup-drop-range-description=Maximum range, actual range scales with players reach. Large values may impact performance!
+max-inventory-cleanup-drop-range-description=Maximum range, actual range scales with players reach. Large values may impact performance!\n\nDefault: 30
 ignored-entities=Ignored buildings
 globally-disabled=Disabled by map settings
 
