Relative gui placement

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -1,7 +1,7 @@
 [mod-setting-name]
 disable-distribute=Disable [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font] modification globally
 disable-inventory-cleanup=Disable Inventory Cleanup (__CONTROL__inventory-cleanup__) globally
-info=Settings moved (press __CONTROL__open-even-distribution-settings__ in game)
+info=Settings moved to inventory screen
 
 distribution-delay=DEPRECATED - Dont change!
 max-inventory-cleanup-drop-range=DEPRECATED - Dont change!
@@ -20,15 +20,12 @@ enable-logistics-tab=Enables the character logistics tab (press __CONTROL__contr
 
 [controls]
 inventory-cleanup=Inventory Cleanup
-open-even-distribution-settings=Open Even Distribution settings
 	
 [controls-description]
 inventory-cleanup=Evenly distribute excess trash items into nearby machines.
 
-[shortcut]
-open-even-distribution-settings=Even Distribution settings (__CONTROL__open-even-distribution-settings__)
-
 [settings-gui]
+open-settings=Even Distribution settings
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Evenly distributes excess trash items into nearby machines.
