Better inv cleanup description

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -1,7 +1,7 @@
 [mod-setting-name]
 disable-distribute=Disable [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font] modification globally
 disable-inventory-cleanup=Disable Inventory Cleanup (__CONTROL__inventory-cleanup__) globally
-info=Settings moved to inventory screen
+info=Settings moved to inventory screen...
 
 distribution-delay=DEPRECATED - Dont change!
 max-inventory-cleanup-drop-range=DEPRECATED - Dont change!
@@ -16,31 +16,25 @@ cleanup-logistic-request-overflow=DEPRECATED - Dont change!
 enable-logistics-tab=Even Distribution
 
 [technology-description]
-enable-logistics-tab=Enables the character logistics tab (press __CONTROL__controller-gui-logistics-tab__). Use it to customize the Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__).
+enable-logistics-tab=Enables the character logistic slots. Use them to customize the Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__).
 
 [controls]
 inventory-cleanup=Inventory Cleanup
 	
 [controls-description]
-inventory-cleanup=Evenly distribute excess trash items into nearby machines.
+inventory-cleanup=Evenly distribute unneeded items into nearby machines.
 
 [settings-gui]
 open-settings=Even Distribution settings
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup (__CONTROL__inventory-cleanup__)
-inventory-cleanup-description=Evenly distributes excess trash items into nearby machines.
-inventory-cleanup-list=Includes items from:
-inventory-cleanup-configure=Customize using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
-inventory-cleanup-override=Personal logistic requests override the defaults.
-inventory-cleanup-ignore=How to ignore items?
-inventory-cleanup-ignore-description=The default items are ignored when you add any kind of logistic request for them.\nIf you don't actually want to request anything, set the requested amount to 0 and the maximum amount to infinite.
+inventory-cleanup-description=Evenly distributes unneeded items into nearby machines.
+inventory-cleanup-configure=Customize using the [font=default-bold]personal logistic slots[/font].
+inventory-cleanup-configure-description=By default __CONTROL__inventory-cleanup__ distributes items like raw ores, intermediates and science packs aswell as your trash-slots.\n\n[font=default-bold]How to customize[/font]\nYour personal logistic requests have a minimum and maximum count. __CONTROL__inventory-cleanup__ distributes all items above the maximum count (and above the minimum count if the setting below is active).\n\n[font=default-bold]Ignoring items[/font]\nTo exclude certain items, add them to the logistic slots with a requested amount of 0 and a maximum amount of infinite.
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
 replace-items=Replace inferior fuel/ammo (e.g. wood with coal)
-include-defaults-description=By default __CONTROL__inventory-cleanup__ distributes trash items like raw ores, intermediates and science packs.
-include-trashslots-description=__CONTROL__inventory-cleanup__ distributes all items in your [font=default-bold]trash slots[/font].
-include-autotrash-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]maximum[/font] request limit.\n\nOverrides defaults.
-cleanup-request-overflow-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]minimum[/font] request amount.\n\nOverrides defaults.
+cleanup-request-overflow=Distribute items above the [font=default-bold]minimum[/font] request amount
 drop-trash-to-chests=Drop items to chests
 drop-trash-to-chests-description=__CONTROL__inventory-cleanup__ can drop items into nearby chests already containing them.\n(Ignored for requester chests, they always get requested items)
 use-fuel-limit=Use fuel limit from above
