--- a/locale/de/even-distribution.cfg
+++ b/locale/de/even-distribution.cfg
@@ -1,27 +1,76 @@
 [mod-setting-name]
-distribution-delay=Zeit bis zur Verteilung
-max-inventory-cleanup-drop-range=Maximale Verteilungsreichweite
-drop-trash-to-chests=Verteile Abfall auf Truhen
-ignored-entities=Ignorierte Bauten
+disable-distribute=[font=default-semibold][color=128,206,240]STRG+Click Drag[/color][/font] Modifikation global deaktivieren
+disable-inventory-cleanup=Inventar Bereinigung (__CONTROL__inventory-cleanup__) global deaktivieren
+info=Einstellungen in den Inventar-Bildschirm verschoben...
 
+distribution-delay=VERALTET - Nicht ändern!
+max-inventory-cleanup-drop-range=VERALTET - Nicht ändern!
+ignored-entities=VERALTET - Nicht ändern!
+drop-trash-to-chests=VERALTET - Nicht ändern!
 enable-ed=VERALTET - Nicht ändern!
 take-from-car=VERALTET - Nicht ändern!
 inventory-cleanup-custom-trash=VERALTET - Nicht ändern!
 cleanup-logistic-request-overflow=VERALTET - Nicht ändern!
 
-[mod-setting-description]
-distribution-delay=Die Zeit in Sekunden, die gewartet werden soll, bis die Gegenstände gleichmäßig auf mehrere Gebäude verteilt werden.
-max-inventory-cleanup-drop-range=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nMaximale Verteilungsreichweite. Eigentliche Reichweite basiert auf der Reichweite des Charakters. Hohe Werte können die Performance beeinflussen.
-drop-trash-to-chests=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nÜberschüssiger Abfall wird auch auf Truhen in der Nähe, die den Gegenstand bereits beinhalten, verteilt. (Dies gilt nicht für Anforderungskisten)
-ignored-entities=Ziele die bei der Verteilung ignoriert werden.\n\nInterne Namen getrennt durch Leerzeichen.\nBeispiel: "steel-furnace iron-chest"
+[technology-name]
+enable-logistics-tab=Even Distribution
+
+[technology-description]
+enable-logistics-tab=Aktiviert die Logistik-Slots. Verwende diese, um den Inventar Bereinigung Hotkey (__CONTROL__inventory-cleanup__) anzupassen.
 
 [controls]
 inventory-cleanup=Inventar Bereinigung
 
 [controls-description]
-inventory-cleanup=Verteile überschüssige Müll-Items gleichmäßig auf Maschinen in der Nähe.\n\nInklusive rohe unnützliche Items, Abfall-Logistikplätze und überschüssige Logistikanforderungen\nErforsche die Abfall-Logistikplätze früher um einfacher Abfall auszuwählen.\n\nSiehe Mod-Einstellungen für Individualisierung.
+inventory-cleanup=Verteilt nicht benötigte Items gleichmäßig auf Maschinen in der Nähe.
 
-[message]
-setting-parse-error=[Even Distribution] Ungültiger Wert '__2__' in der Pro-Spieler Mod Einstellung '__1__'__3__. Wert wurde ignoriert.
-for-user= von __1__
-usage=[Even Distribution] Wichtig: Wenn du die Maus über mehrere Gebäude ziehst um Items zu verteilen, beginne mit einem Klick auf einem LEEREN FELD!
+[settings-gui]
+open-settings=Even Distribution Einstellungen
+general=Allgemein
+advanced=Erweitert
+drag-title=Item Verteilung ([color=128,206,240]STRG+Click Drag[/color])
+inventory-cleanup-title=Inventar Bereinigung (__CONTROL__inventory-cleanup__)
+inventory-cleanup-description=Verteilt nicht benötigte Items gleichmäßig auf Maschinen in der Nähe.
+inventory-cleanup-configure=Anpassung möglich über die [font=default-bold]persönlichen Logistik-Slots[/font].
+inventory-cleanup-configure-description=Standardmäßig verteilt __CONTROL__inventory-cleanup__ deine Abfallplätze und Items wie Erze, Zwischenprodukte and Wissenschaftspakete.\n\n[font=default-bold]Anpassung[/font]\nDeine persönlichen Logistikanforderungen haben eine minimale und eine maximale Item-Anzahl. __CONTROL__inventory-cleanup__ verteilt alle Items, die das Maximum überschreiten (bzw. das Minimum, wenn die nachfolgende Einstellung aktiv ist).\n\n[font=default-bold]Items ignorieren[/font]\nUm bestimmte Items auszuschließen, füge diese zu den Logistik-Slots mit einer minimalen Anzahl von 0 und einer maximalen Anzahl von Unendlich hinzu.
+drag-evenly-distribute=Items gleichmäßig verteilen
+drag-balance-inventories=Inventare ausbalancieren
+replace-items=Ersetze minderwertigen Treibstoff/Munition (z.B. Holz mit Kohle)
+cleanup-request-overflow=Verteile Items über der [font=default-bold]minimalen[/font] angeforderten Menge
+drop-trash-to-chests=Verteile Items auf Truhen
+drop-trash-to-chests-description=__CONTROL__inventory-cleanup__ kann Items auf Truhen verteilen, die diese bereits enthalten.\n(Ignoriert für Anforderungskisten, diese erhalten immer die angeforderten Items)
+use-fuel-limit=Beachte oben festgelegte Treibstoff-Grenze
+use-ammo-limit=Beachte oben festgelegte Munitions-Grenze
+enable=Aktivieren
+fuel-limit=Treibstoff-Grenze
+ammo-limit=Munitions-Grenze
+distribute-from=Verteile Items von
+hand-tooltip=Hand
+inventory-tooltip=Inventar
+car-tooltip=Fahrzeug das du gerade fährst
+distribution-delay=Verteilungs-Verzögerung
+distribution-delay-description=Die Verzögerung bevor Items mit [font=default-semibold][color=128,206,240]STRG+Click Drag[/color][/font] verteilt werden.\n\Standard: 0.9
+max-inventory-cleanup-drop-range=__CONTROL__inventory-cleanup__ Reichweite
+max-inventory-cleanup-drop-range-description=Maximale Reichweite, tatsächliche Reichweite wächst mit der Spieler-Reichweite. Große Werte können die Performance beeinflussen!\n\Standard: 30
+ignored-entities=Ignorierte Gebäude
+globally-disabled=Durch Karten-Einstellungen deaktiviert
+
+[fuel-limit-type]
+stacks=Stapel
+items=Items
+mj=MJ
+
+[fuel-limit-tooltip]
+stacks=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter_2_{0=bekommen kein Treibstoff|50=bekommen einen halben Stapel Treibstoff|100=bekommen 1 Stapel Treibstoff|rest=bekommen __1__ Stapel Treibstoff}__.[/color]
+items=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter_1_{0=bekommen kein Treibstoff|1=bekommen 1 Treibstoff-Item|rest=bekommen __1__ Treibstoff-Items}__.[/color]
+mj=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter_1_{0=bekommen kein Treibstoff|rest=bekommen Treibstoff-Item im Wert von __1__ MJ}__.[/color]
+disabled=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Keine Treibstoff-Grenze.[/color]
+
+[ammo-limit-type]
+stacks=Stapel
+items=Items
+
+[ammo-limit-tooltip]
+stacks=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Turrets __plural_for_parameter_2_{0=bekommen keine Munition|50=bekommen einen halben Stapel Munition|100=bekommen 1 Stapel Munition |rest=bekommen __1__ Stapel Munition}__.[/color]
+items=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Turrets __plural_for_parameter_1_{0=bekommen keine Munition|1=bekommen 1 Magazin|rest=bekommen __1__ Magazine}__.[/color]
+disabled=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Keine Munitions-Grenze.[/color]
