--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -26,6 +26,8 @@ inventory-cleanup=Evenly distribute unneeded items into nearby machines.
 
 [settings-gui]
 open-settings=Even Distribution settings
+general=General
+advanced=Advanced
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Evenly distributes unneeded items into nearby machines.
