Added drop items to machine outputs

--- a/locale/de/even-distribution.cfg
+++ b/locale/de/even-distribution.cfg
@@ -39,6 +39,7 @@ replace-items=Ersetze minderwertigen Treibstoff/Munition (z.B. Holz mit Kohle)
 cleanup-request-overflow=Verteile Items über der [font=default-bold]minimalen[/font] angeforderten Menge
 drop-trash-to-chests=Verteile Items auf Truhen
 drop-trash-to-chests-description=__CONTROL__inventory-cleanup__ kann Items auf Truhen verteilen, die diese bereits enthalten.\n(Ignoriert für Anforderungskisten, diese erhalten immer die angeforderten Items)
+drop-trash-to-output=Verteile Items in Maschinenausgänge
 use-fuel-limit=Beachte oben festgelegte Treibstoff-Grenze
 use-ammo-limit=Beachte oben festgelegte Munitions-Grenze
 enable=Aktivieren
