--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -39,6 +39,7 @@ replace-items=Replace inferior fuel/ammo (e.g. wood with coal)
 cleanup-request-overflow=Distribute items above the [font=default-bold]minimum[/font] request amount
 drop-trash-to-chests=Drop items to chests
 drop-trash-to-chests-description=__CONTROL__inventory-cleanup__ can drop items into nearby chests already containing them.\n(Ignored for requester chests, they always get requested items)
+drop-trash-to-output=Drop items to machine outputs
 use-fuel-limit=Use fuel limit from above
 use-ammo-limit=Use ammo limit from above
 enable=Enable
