Added global max shift+c range

--- a/locale/de/even-distribution.cfg
+++ b/locale/de/even-distribution.cfg
@@ -1,6 +1,7 @@
 [mod-setting-name]
 disable-distribute=[font=default-semibold][color=128,206,240]STRG+Click Drag[/color][/font] Modifikation global deaktivieren
 disable-inventory-cleanup=Inventar Bereinigung (__CONTROL__inventory-cleanup__) global deaktivieren
+global-max-inventory-cleanup-range=Maximale Inventar Bereinigungs (__CONTROL__inventory-cleanup__) Reichweite (global)
 info=Einstellungen in den Inventar-Bildschirm verschoben...
 
 distribution-delay=VERALTET - Nicht ändern!
