--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -1,6 +1,7 @@
 [mod-setting-name]
 disable-distribute=Disable [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font] modification globally
 disable-inventory-cleanup=Disable Inventory Cleanup (__CONTROL__inventory-cleanup__) globally
+global-max-inventory-cleanup-range=Maximum Inventory Cleanup (__CONTROL__inventory-cleanup__) range (global)
 info=Settings moved to inventory screen...
 
 distribution-delay=DEPRECATED - Dont change!
