Fix pt-BR locale Typos
I should have checked not just by reading them.

--- a/locale/pt-BR/even-distribution.cfg
+++ b/locale/pt-BR/even-distribution.cfg
@@ -1,7 +1,7 @@
 [mod-setting-name]
 disable-distribute="Desabilitar [font=default-semibold][color=128,206,240]CTRL + Clicar e Arrastar[/color][/font] modificação global"
-disable-inventory-cleanup=Desativar Limpeza de Invetário (__CONTROL__inventory-cleanup__) globalmente
-global-max-inventory-cleanup-range=Limite de Limpeza de Invetário (__CONTROL__inventory-cleanup__) alcance (global)
+disable-inventory-cleanup=Desativar Limpeza de Inventário (__CONTROL__inventory-cleanup__) globalmente
+global-max-inventory-cleanup-range=Limite de Limpeza de Inventário (__CONTROL__inventory-cleanup__) alcance (global)
 info=Configurações movidas para a tela de inventário...
 
 distribution-delay=DESCONTINUADO - Não mude!
@@ -30,10 +30,10 @@ open-settings=Configurações de Even Distribution
 general=Geral
 advanced=Avançado
 drag-title="Distribuir itens ([color=128,206,240]CTRL + Clique e Arrastar[/color])"
-inventory-cleanup-title=Limpeza de Invetário (__CONTROL__inventory-cleanup__)
+inventory-cleanup-title=Limpeza de Inventário (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Distribui uniformemente itens desnecessários em máquinas próximas.
 inventory-cleanup-configure="Personalize usando os [font=default-bold]espaços de logística pessoal[/font]."
-inventory-cleanup-configure-description="Por padrão, __CONTROL__inventory-cleanup__ distribui itens como minérios brutos, intermediários e pacotes científicos, bem como seus espaçõs de lixo.\n\n[font=default-bold]Como personalizar[/font]\nSuas solicitações logísticas pessoais têm uma contagem mínima e máxima. __CONTROL__inventory-cleanup__\n distribui todos os itens acima da contagem máxima (e acima da contagem mínima se a configuração abaixo estiver ativa).\n\n[font=default-bold]Ignorando itens[/font]\nPara ignorar certos itens, adicione-os aos slots logísticos com uma quantidade solicitada de 0 e uma quantidade máxima de infinito."
+inventory-cleanup-configure-description="Por padrão, __CONTROL__inventory-cleanup__ distribui itens como minérios brutos, intermediários e pacotes científicos, bem como seus espaços de lixo.\n\n[font=default-bold]Como personalizar[/font]\nSuas solicitações logísticas pessoais têm uma contagem mínima e máxima. __CONTROL__inventory-cleanup__\n distribui todos os itens acima da contagem máxima (e acima da contagem mínima se a configuração abaixo estiver ativa).\n\n[font=default-bold]Ignorando itens[/font]\nPara ignorar certos itens, adicione-os aos slots logísticos com uma quantidade solicitada de 0 e uma quantidade máxima de infinito."
 drag-evenly-distribute=Distribuir itens uniformemente
 drag-balance-inventories=Equilibre os inventários
 replace-items=Substitua combustível/munição inferior (por exemplo, madeira com carvão)
