Other small fixes

--- a/locale/de/even-distribution.cfg
+++ b/locale/de/even-distribution.cfg
@@ -33,7 +33,7 @@ drag-title=Item Verteilung ([color=128,206,240]STRG+Click Drag[/color])
 inventory-cleanup-title=Inventar Bereinigung (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Verteilt nicht benötigte Items gleichmäßig auf Maschinen in der Nähe.
 inventory-cleanup-configure=Anpassung möglich über die [font=default-bold]persönlichen Logistik-Slots[/font].
-inventory-cleanup-configure-description=Standardmäßig verteilt __CONTROL__inventory-cleanup__ deine Abfallplätze und Items wie Erze, Zwischenprodukte and Wissenschaftspakete.\n\n[font=default-bold]Anpassung[/font]\nDeine persönlichen Logistikanforderungen haben eine minimale und eine maximale Item-Anzahl. __CONTROL__inventory-cleanup__ verteilt alle Items, die das Maximum überschreiten (bzw. das Minimum, wenn die nachfolgende Einstellung aktiv ist).\n\n[font=default-bold]Items ignorieren[/font]\nUm bestimmte Items auszuschließen, füge diese zu den Logistik-Slots mit einer minimalen Anzahl von 0 und einer maximalen Anzahl von Unendlich hinzu.
+inventory-cleanup-configure-description=Standardmäßig verteilt __CONTROL__inventory-cleanup__ deine Abfallplätze und Items wie Erze, Zwischenprodukte and Wissenschaftspakete.\n\n[font=default-bold]Anpassung[/font]\nZusätzlich kannst du es über deine persönlichen Logistikanforderungen anpassen. Die Anforderungen haben eine minimale und eine maximale Item-Anzahl. __CONTROL__inventory-cleanup__ verteilt alle Items, die das Maximum überschreiten (bzw. das Minimum, wenn die nachfolgende Einstellung aktiv ist).\n\n[font=default-bold]Items ignorieren[/font]\nUm bestimmte Items auszuschließen, füge diese zu den Logistik-Slots mit einer minimalen Anzahl von 0 und einer maximalen Anzahl von Unendlich hinzu.
 drag-evenly-distribute=Items gleichmäßig verteilen
 drag-balance-inventories=Inventare ausbalancieren
 replace-items=Ersetze minderwertigen Treibstoff/Munition (z.B. Holz mit Kohle)
@@ -63,9 +63,9 @@ items=Items
 mj=MJ
 
 [fuel-limit-tooltip]
-stacks=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter_2_{0=bekommen kein Treibstoff|50=bekommen einen halben Stapel Treibstoff|100=bekommen 1 Stapel Treibstoff|rest=bekommen __1__ Stapel Treibstoff}__.[/color]
-items=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter_1_{0=bekommen kein Treibstoff|1=bekommen 1 Treibstoff-Item|rest=bekommen __1__ Treibstoff-Items}__.[/color]
-mj=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter_1_{0=bekommen kein Treibstoff|rest=bekommen Treibstoff-Item im Wert von __1__ MJ}__.[/color]
+stacks=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter__2__{0=bekommen kein Treibstoff|50=bekommen einen halben Stapel Treibstoff|100=bekommen 1 Stapel Treibstoff|rest=bekommen __1__ Stapel Treibstoff}__.[/color]
+items=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter__1__{0=bekommen kein Treibstoff|1=bekommen 1 Treibstoff-Item|rest=bekommen __1__ Treibstoff-Items}__.[/color]
+mj=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Verbrenner __plural_for_parameter__1__{0=bekommen kein Treibstoff|rest=bekommen Treibstoff-Item im Wert von __1__ MJ}__.[/color]
 disabled=Gewünschte Menge an Treibstoff in Verbrennern.\n\n[color=128,206,240]Aktuelle Regel: Keine Treibstoff-Grenze.[/color]
 
 [ammo-limit-type]
@@ -73,6 +73,6 @@ stacks=Stapel
 items=Items
 
 [ammo-limit-tooltip]
-stacks=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Turrets __plural_for_parameter_2_{0=bekommen keine Munition|50=bekommen einen halben Stapel Munition|100=bekommen 1 Stapel Munition |rest=bekommen __1__ Stapel Munition}__.[/color]
-items=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Turrets __plural_for_parameter_1_{0=bekommen keine Munition|1=bekommen 1 Magazin|rest=bekommen __1__ Magazine}__.[/color]
+stacks=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Turrets __plural_for_parameter__2__{0=bekommen keine Munition|50=bekommen einen halben Stapel Munition|100=bekommen 1 Stapel Munition |rest=bekommen __1__ Stapel Munition}__.[/color]
+items=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Turrets __plural_for_parameter__1__{0=bekommen keine Munition|1=bekommen 1 Magazin|rest=bekommen __1__ Magazine}__.[/color]
 disabled=Gewünschte Menge an Munition in Geschütztürmen.\n\n[color=128,206,240]Aktuelle Regel: Keine Munitions-Grenze.[/color]
