--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -33,7 +33,7 @@ drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Evenly distributes unneeded items into nearby machines.
 inventory-cleanup-configure=Customize using the [font=default-bold]personal logistic slots[/font].
-inventory-cleanup-configure-description=By default __CONTROL__inventory-cleanup__ distributes items like raw ores, intermediates and science packs aswell as your trash-slots.\n\n[font=default-bold]How to customize[/font]\nYour personal logistic requests have a minimum and maximum count. __CONTROL__inventory-cleanup__ distributes all items above the maximum count (and above the minimum count if the setting below is active).\n\n[font=default-bold]Ignoring items[/font]\nTo exclude certain items, add them to the logistic slots with a requested amount of 0 and a maximum amount of infinite.
+inventory-cleanup-configure-description=By default __CONTROL__inventory-cleanup__ distributes items like raw ores, intermediates and science packs aswell as your trash-slots.\n\n[font=default-bold]How to customize[/font]\nAddtionally you can customize it using your personal logistic slots. The slots have a minimum and maximum count. __CONTROL__inventory-cleanup__ distributes all items above the maximum count (and above the minimum count if the setting below is active).\n\n[font=default-bold]Ignoring items[/font]\nTo exclude certain items, add them to the logistic slots with a requested amount of 0 and a maximum amount of infinite.
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
 replace-items=Replace inferior fuel/ammo (e.g. wood with coal)
@@ -63,9 +63,9 @@ items=Items
 mj=MJ
 
 [fuel-limit-tooltip]
-stacks=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter_2_{0=won't get any fuel|50=will get half a stack of fuel|100=will get 1 stack of fuel|rest=will get __1__ stacks of fuel}__.[/color]
-items=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter_1_{0=won't get any fuel|1=will get 1 fuel item|rest=will get __1__ fuel items}__.[/color]
-mj=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter_1_{0=won't get any fuel|rest=will get __1__ MJ worth of fuel}__.[/color]
+stacks=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter__2__{0=won't get any fuel|50=will get half a stack of fuel|100=will get 1 stack of fuel|rest=will get __1__ stacks of fuel}__.[/color]
+items=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter__1__{0=won't get any fuel|1=will get 1 fuel item|rest=will get __1__ fuel items}__.[/color]
+mj=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter__1__{0=won't get any fuel|rest=will get __1__ MJ worth of fuel}__.[/color]
 disabled=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: No fuel limit.[/color]
 
 [ammo-limit-type]
@@ -73,6 +73,6 @@ stacks=Stacks
 items=Items
 
 [ammo-limit-tooltip]
-stacks=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: Turrets __plural_for_parameter_2_{0=won't get any ammo|50=will get half a stack of ammo|100=will get 1 stack of ammo|rest=will get __1__ stacks of ammo}__.[/color]
-items=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: Turrets __plural_for_parameter_1_{0=won't get any ammo|1=will get 1 magazine|rest=will get __1__ magazines}__.[/color]
+stacks=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: Turrets __plural_for_parameter__2__{0=won't get any ammo|50=will get half a stack of ammo|100=will get 1 stack of ammo|rest=will get __1__ stacks of ammo}__.[/color]
+items=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: Turrets __plural_for_parameter__1__{0=won't get any ammo|1=will get 1 magazine|rest=will get __1__ magazines}__.[/color]
 disabled=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: No ammo limit.[/color]
